# ProjectModel

./: BUILD.md  CMakeLists.txt
Algorithm/: CMakeLists.txt
Algorithm/src/: main.cpp
Common/: CMakeLists.txt
Common/AppTemplate/: CMakeLists.txt
Common/AppTemplate/include/: AppTemplate.h
Common/AppTemplate/src/: AppTemplate.cpp
Common/EventBus/: CMakeLists.txt
Common/EventBus/include/: EventNode.h
Common/EventBus/src/: EventNode.cpp
Gui/: CMakeLists.txt
Gui/src/: main.cpp
VirtualSensor/: CMakeLists.txt
VirtualSensor/src/: main.cpp
WebApp/: CMakeLists.txt
WebApp/src/: main.cpp
apps/Algorithm/: CMakeLists.txt
apps/Algorithm/include/: Algorithm.h
apps/Algorithm/proto/: algorithm_result.proto
apps/Algorithm/src/: Algorithm.cpp  main.cpp
apps/GUI/: CMakeLists.txt  appqml.qrc
apps/GUI/include/: GUI.h  LayoutManager.h  QtGUI.h
apps/GUI/model/: DataModel.cpp  DataModel.h
apps/GUI/qml/: AlgorithmPanel.qml  ChartPanel.qml  DynamicLayout.qml  SensorPanel.qml  StatusBar.qml  main.qml
apps/GUI/src/: GUI.cpp  LayoutManager.cpp  QtGUI.cpp  main.cpp
apps/VirtualSensor/: CMakeLists.txt
apps/VirtualSensor/include/: VirtualSensor.h
apps/VirtualSensor/proto/: sensor_data.proto
apps/VirtualSensor/src/: VirtualSensor.cpp  main.cpp
apps/WebApp/: CMakeLists.txt  setup.md
apps/WebApp/config/: lighttpd.conf
apps/WebApp/html/: index.html
apps/WebApp/html/css/: dashboard.css  main.css
apps/WebApp/include/: HttpServer.h  WebApp.h
apps/WebApp/proto/: event.proto
apps/WebApp/src/: HttpServer.cpp  WebApp.cpp  main.cpp
libs/: CMakeLists.txt
libs/AppTemplate/: CMakeLists.txt
libs/AppTemplate/include/: AppTemplate.h
libs/AppTemplate/src/: AppTemplate.cpp
libs/ConfigManager/: CMakeLists.txt
libs/ConfigManager/include/: ConfigManager.h
libs/ConfigManager/src/: ConfigManager.cpp
libs/EventBus/: CMakeLists.txt
libs/EventBus/include/: EventBus.h  TcpClient.h  TcpServer.h
libs/EventBus/proto/: event_message.proto
libs/EventBus/src/: EventBus.cpp  TcpClient.cpp  TcpServer.cpp
